# FFMpeg_QT

./: CMakeLists.txt  FfmpegVideoReader.cpp  FfmpegVideoReader.h  Main.qml  VideoFrameProvider.cpp  VideoFrameProvider.h  main.cpp
